@@ -3,6 +3,9 @@ Changelog
 
 5.6-dev - (unreleased)
 ----------------------
+* Bug fix: fixed issue where map infoTemplate displayed undefined as header
+  text when itemTitle returned undefined
+  [ichimdav refs #8523]
 * Bug fix: better fix for loading of geotagsClusterLayer.js
   [ichimdav #8523]
 
